Fix broken layout when the text is too short.

--- a/app/src/style/index.less
+++ b/app/src/style/index.less
@@ -152,6 +152,7 @@ li.active {
 
     .text-content {
         text-align: justify;
+        min-height: 140px;
     }
 
     .text-title {
